--- a/src/index.html
+++ b/src/index.html
@@ -29,19 +29,19 @@
 
                 //Add authentication details for connecting to Azure Maps.
                 authOptions: {
-                    //Use Azure Active Directory authentication.
-                    authType: 'anonymous',
-                    clientId: 'e6b6ab59-eb5d-4d25-aa57-581135b927f0', //Your Azure Maps client id for accessing your Azure Maps account.
-                    getToken: function (resolve, reject, map) {
-                        //URL to your authentication service that retrieves an Azure Active Directory Token.
-                        var tokenServiceUrl = "https://samples.azuremaps.com/api/GetAzureMapsToken";
+                    // //Use Azure Active Directory authentication.
+                    // authType: 'anonymous',
+                    // clientId: 'e6b6ab59-eb5d-4d25-aa57-581135b927f0', //Your Azure Maps client id for accessing your Azure Maps account.
+                    // getToken: function (resolve, reject, map) {
+                    //     //URL to your authentication service that retrieves an Azure Active Directory Token.
+                    //     var tokenServiceUrl = "https://samples.azuremaps.com/api/GetAzureMapsToken";
 
-                        fetch(tokenServiceUrl).then(r => r.text()).then(token => resolve(token));
-                    }
+                    //     fetch(tokenServiceUrl).then(r => r.text()).then(token => resolve(token));
+                    // }
 
                     //Alternatively, use an Azure Maps key. Get an Azure Maps key at https://azure.com/maps. NOTE: The primary key should be used as the key.
-                    //authType: 'subscriptionKey',
-                    //subscriptionKey: '[YOUR_AZURE_MAPS_KEY]'
+                    authType: 'subscriptionKey',
+                    subscriptionKey: '0d9a1fc9-7087-4a74-a749-dc2a31b8727e'
                 }
             });
 
