Smoothened the lines and roads to look better (1)

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@ function perpendicularDistance(point, start, end) {
                 // Add authentication details for connecting to Azure Maps.
                 authOptions: {
                     authType: 'subscriptionKey',
-                    subscriptionKey: 'ga6N-Pxs9QImElvXeg3J3H7UQRcVk_zRXejD8NJQt6E' // Replace with your actual subscription key
+                    subscriptionKey: 'ga6N-Pxs9QImElvXeg3J3H7UQRcVk_zRXejD8NJQt6E'
                 }
             });
 
